k8s-manifest.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: cb-front
  name: cb-front
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cb-front
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cb-front
      name: cb-front
    spec:
      containers:
      - image: arielccardoso/image_version
        imagePullPolicy: Always
        name: cb-front
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 1
            memory: 1Gi
        securityContext:
          privileged: false
          procMount: Default  
        ports:
            - name: web
              containerPort: 80
              protocol: TCP
      restartPolicy: Always
      dnsPolicy: ClusterFirst

---
apiVersion: v1
kind: Service
metadata:
  name: cb-front
  labels:
    app: cb-front
spec:
  selector:
    app: cb-front
  ports:
    - port: 80
      name: web
      targetPort: web

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cb-front-ssl
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`www.arielcardoso.net`)
    kind: Rule
    services:
    - name: cb-front
      port: 80
  tls:
    certResolver: ariel
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cb-front
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`www.arielcardoso.net`)
    kind: Rule
    middlewares:
      - name: http2https
    services:
    - name: cb-front
      port: 80
